Added a delete button on the queue page, separated out the home page, to allow for all settings to be on a single page

--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -1,4 +1,4 @@
-<ion-view hide-back-button="false" title="Loved One Notifier">
+<ion-view hide-back-button="false" title="antiSocialite">
     <ion-content padding="true">
         <div class="list">
             <label class="item item-input">
