--- a/app/templates/intro.html
+++ b/app/templates/intro.html
@@ -89,7 +89,7 @@
                     Did you ever want an App that would send SMS for you?
                 </p>
                 <p>
-                    Look no farther and follow this wizard..
+                    Look no farther! Follow this wizard..
                 </p>
             </div>
         </ion-slide>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="item text-left">
                     <h2>Step 4</h2>
-                    <p class="ft-17">Send all scheduled SMSs with a click</p>
+                    <p class="ft-17">Send all scheduled SMSs with a single touch</p>
                 </div>
             </div>
             <br/>
