--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -6,7 +6,7 @@
                 <input type="text" ng-model="searchC" placeholder="Search Contacts...">
             </label>
             <ul class="list">
-                <li class="item item-checkbox" ng-repeat="c in contacts | orderBy: 'displayName' | filter:searchC">
+                <li class="item item-checkbox" ng-repeat="c in contacts | orderBy: 'displayName' | filter:searchContacts">
                     <label class="checkbox">
                         <input type="checkbox" ng-model="c.isChecked" ng-checked="c.isChecked" ng-change="handleContact(c)">
                     </label>
