--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view hide-back-button="true" title="antiSocialite">
+<ion-view hide-back-button="false" title="antiSocialite">
     <ion-content padding="true">
 
         <div class="list card">
@@ -12,6 +12,9 @@
                 </label>
             </div>
         </div>
+        <button class="button button-full button-dark" ng-click="toContacts()">
+        Show my Contacts
+        </button>
     </ion-content>
     <ion-footer-bar class="bar-assertive">
         <h5 class="center-footer">Made @ HackReactor</h5>
