Known good state that includes auth, messages, and Android emulator works also

--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -16,4 +16,7 @@
             </ul>
         </div>
     </ion-content>
+    <ion-footer-bar class="bar-assertive">
+        <h5 class="center-footer">antiSocialite made @ HackReactor</h5>
+    </ion-footer-bar>
 </ion-view>
