--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -17,7 +17,7 @@
         </button>
     </ion-content>
     <ion-footer-bar class="bar-assertive">
-        <h5 class="center-footer">Made @ HackReactor</h5>
+        <h5 class="center-footer">antiSocialite made @ HackReactor</h5>
     </ion-footer-bar>
 </ion-view>
 
