Final Styling for the presentation

--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -17,6 +17,6 @@
         </div>
     </ion-content>
     <ion-footer-bar class="bar-assertive">
-        <h5 class="center-footer">antiSocialite made @ HackReactor</h5>
+        <h5 class="center-footer"><b>antiSocialite</b> crafted @ HackReactor</h5>
     </ion-footer-bar>
 </ion-view>
