--- a/app/templates/message.html
+++ b/app/templates/message.html
@@ -15,13 +15,13 @@
             <label class="item item-input">
                 <input type="date" ng-model="message.date | date: 'yyyy-MM-ddTHH:mm:ss'" >
             </label>
-            <button value="send" ng-click="send()" class="button button-full button-assertive">Send</button>
+            <button value="send" ng-click="send()" class="button button-full button-positive">Send</button>
             <!--<button value="save" type="submit" class="button button-full button-stable">Save</button>-->
             <button value="delete" ng-click="onItemDelete(message)" class="button button-full button-dark">Delete</button>
         </form>
     </ion-content>
     <ion-footer-bar class="bar-assertive">
-        <h5 class="center-footer">antiSocialite made @ HackReactor</h5>
+        <h5 class="center-footer"><b>antiSocialite</b> crafted @ HackReactor</h5>
     </ion-footer-bar>
 </ion-view>
 
