--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -12,12 +12,15 @@
                 </label>
             </div>
         </div>
-        <button class="button button-full button-dark" ng-click="toContacts()">
+        <button class="button button-full button-calm" ng-click="toContacts()">
         Show my Contacts
         </button>
+        <!--<button class="button button-full button-calm" ng-click="toContacts()">-->
+            <!--Sign Out-->
+        <!--</button>-->
     </ion-content>
     <ion-footer-bar class="bar-assertive">
-        <h5 class="center-footer">antiSocialite made @ HackReactor</h5>
+        <h5 class="center-footer"><b>antiSocialite</b> crafted @ HackReactor</h5>
     </ion-footer-bar>
 </ion-view>
 
