--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,8 +1,8 @@
-<ion-view title="" class="splash">
+<ion-view title="Welcome" class="splash">
 
-    <ion-header-bar class="bar-assertive">
-        <h1 class="title">Login</h1>
-    </ion-header-bar>
+    <!--<ion-header-bar class="bar-assertive">-->
+        <!--<h1 class="title">Welcome</h1>-->
+    <!--</ion-header-bar>-->
     <ion-content has-header="true" padding="true">
         {{message}}
         <form class="list">
@@ -17,12 +17,12 @@
                 <input type="password" placeholder="Password" ng-model="user.password" value="test" required>
             </label>
             <!--<div class="padding">-->
-                <button class="button button-full button-stable" ng-click="login()">Login</button>
+                <button class="button button-full button-calm" ng-click="login()">Login</button>
             <!--</div>-->
         </form>
     </ion-content>
     <ion-footer-bar class="bar-assertive">
-        <h5 class="center-footer">antiSocialite made @ HackReactor</h5>
+        <h5 class="center-footer"><b>antiSocialite </b>crafted @ HackReactor</h5>
     </ion-footer-bar>
 </ion-view>
 
