Changed UI Created Logout function Enables user to see all messages

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view title="Welcome" class="splash">
+<ion-view hide-back-button="true" title="Welcome" class="splash">
 
     <!--<ion-header-bar class="bar-assertive">-->
         <!--<h1 class="title">Welcome</h1>-->
