--- a/app/templates/messages.html
+++ b/app/templates/messages.html
@@ -1,12 +1,8 @@
-<ion-view hide-back-button="true">
-    <ion-nav-buttons side="left">
+<ion-view hide-back-button="false">
+    <ion-nav-buttons side="right">
         <button class="button button-icon icon ion-close-circled"
                 ng-click="shouldShowDelete = !shouldShowDelete">
-
         </button>
-    </ion-nav-buttons>
-    <ion-nav-buttons side="right">
-        <button ng-click="config()" class="button button-icon icon ion-ios7-home"></button>
     </ion-nav-buttons>
     <ion-content padding="true">
         <!--<div class="padding" ng-show="allMessages.length > 0">-->
