--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -1,4 +1,4 @@
-<ion-view hide-back-button="false" title="antiSocialite">
+<ion-view hide-back-button="false" title="Contacts">
     <ion-content padding="true">
         <div class="list">
             <label class="item item-input">
