--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,14 +1,8 @@
 <ion-view hide-back-button="true" title="Welcome" class="splash">
-
-    <!--<ion-header-bar class="bar-assertive">-->
-        <!--<h1 class="title">Welcome</h1>-->
-    <!--</ion-header-bar>-->
-    <ion-content has-header="true" padding="true">
-        {{message}}
+    <ion-content padding="true">
         <form class="list">
             <div>
                 </br>
-
             </div>
             <label class="item item-input">
                 <input type="text" placeholder="Username" ng-model="user.username" value="test" required>
@@ -17,7 +11,7 @@
                 <input type="password" placeholder="Password" ng-model="user.password" value="test" required>
             </label>
             <!--<div class="padding">-->
-                <button class="button button-full button-calm" ng-click="login()">Login</button>
+            <button class="button button-full button-calm" ng-click="login()">Login</button>
             <!--</div>-->
         </form>
     </ion-content>
