--- a/app/templates/queue.html
+++ b/app/templates/queue.html
@@ -1,4 +1,4 @@
 
-<ion-view hide-back-button="true" title="antiSocialite">
+<ion-view hide-back-button="true">
     <ion-nav-view></ion-nav-view>
 </ion-view>
