--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view hide-back-button="true" title="Welcome" class="splash">
+<ion-view hide-back-button="true" title="ANTISOCIALITE" class="splash">
     <ion-content padding="true">
         <form class="list">
             <div>
@@ -13,6 +13,7 @@
             <!--<div class="padding">-->
             <button class="button button-full button-calm" ng-click="login()">Login</button>
             <!--</div>-->
+             <button class="button button-full button-calm" ng-click="signup()">Sign Up</button>
         </form>
     </ion-content>
     <ion-footer-bar class="bar-assertive">
