--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -6,6 +6,8 @@
     </ion-nav-buttons>
     <ion-content padding="true">
         <div class="list">
+            <button class="button button-full button-calm" ng-click="addContact()">Add Contact</button>
+
             <label class="item item-input">
                 <i class="icon ion-search placeholder-icon"></i>
                 <input type="text" ng-model="searchC" placeholder="Search Contacts...">
