--- a/app/templates/message.html
+++ b/app/templates/message.html
@@ -5,11 +5,9 @@
               <span class="input-label">Date</span>
               <input type="date" ng-model="message.date">
             </label>
+            <button class="button button-full button-calm" ng-model="recipient" ng-click="contactList()">Add Recipient</button>
             <label class="item item-input">
                 <textarea placeholder="Content" rows="8" ng-model="message.text"></textarea>
-            </label>
-            <label class="item item-input item-select" ng-controller="ContactsCtrl">
-            <select ng-options="contact as contact.name for contact in contacts | orderBy: 'name'" ng-model="contact" ng-change="setContact(contact || 'Select Contact')">
             </label>
             <button class="button button-full button-calm" ng-click="send()">Schedule Message</button>
         </form>
