Able to save contact selection to send Created new service routes to access variables

--- a/app/templates/contactList.html
+++ b/app/templates/contactList.html
@@ -3,7 +3,7 @@
       <ul class="list" ng-repeat="userStorage in contacts">
         <li class="item item-checkbox">
           <label class="checkbox" ng-click="updateSelection(userStorage)">
-            <input type="checkbox">
+            <input type="checkbox" ng-checked="checkedContacts(userStorage)">
           </label>
           {{userStorage.name}}
         </li>
