--- a/app/templates/message.html
+++ b/app/templates/message.html
@@ -1,5 +1,6 @@
 <ion-view hide-back-button="false" title="Create Message">
     <ion-content padding="true">
+
         <form class="list">
             <label class="item item-input">
               <span class="input-label">Date</span>
@@ -11,11 +12,21 @@
             </label>
             <button class="button button-full button-calm" ng-click="send()">Schedule Message</button>
         </form>
+
+
     </ion-content>
     <ion-footer-bar class="bar-assertive">
         <h5 class="center-footer"><b>antiSocialite</b> crafted @ HackReactor</h5>
     </ion-footer-bar>
+
+
 </ion-view>
+
+
+<!-- <ion-side-menus>
+  <ion-side-menu side="right">
+  </ion-side-menu>
+</ion-side-menus> -->
 
 <!--<ion-modal-view class="padding">-->
     <!--<ion-header-bar>-->
